padding added to sections to stop overlap from navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,8 +39,7 @@ h2 {
 }
 
 .section {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    padding: 4rem; /*prevent navbar overlap*/
 }
 #bg-fill {
     background-color: var(--highlight-color);
